objects/Syndicated_Study__c.object
<CustomObject>
    <description>for Research and Insights and NPD  to track studies</description>
    <fields>
        <fullName>At_Scale_Revenue_High__c</fullName>
        <inlineHelpText>Millions</inlineHelpText>
        <label>At-Scale Revenue High</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>At_Scale_Revenue_Low__c</fullName>
        <inlineHelpText>Millions</inlineHelpText>
        <label>At-Scale Revenue Low</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Delay_Reason__c</fullName>
        <label>Delay Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GPA__c</fullName>
        <label>GPA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Progress_Launch_Score__c</fullName>
        <label>Latest Progress Launch Score</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Latest_Trend_Project_Health__c</fullName>
        <label>Latest Trend (Project Health)</label>
        <picklist>
            <picklistValues>
                <fullName>Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Launch_ETA__c</fullName>
        <label>Launch ETA</label>
        <picklist>
            <picklistValues>
                <fullName>Q2 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 2016</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NPD_Alpha_Completed__c</fullName>
        <label>NPD: Alpha Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPD_Alpha_Started__c</fullName>
        <label>NPD: Alpha Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPD_Beta_Completed__c</fullName>
        <label>NPD: Beta Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPD_Beta_Started__c</fullName>
        <label>NPD: Beta Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPD_Dev_Completed__c</fullName>
        <label>NPD: Dev Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPD_Dev_Started__c</fullName>
        <label>NPD: Dev Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPD_Launched__c</fullName>
        <label>NPD: Launched</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPD_Pre_R1_Completed__c</fullName>
        <description>Created for CR-20141106-8005.</description>
        <label>NPD: Pre-R1 Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPD_Pre_R1_Started__c</fullName>
        <description>Created for CR-20141106-8005.</description>
        <label>NPD: Pre-R1 Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPD_R1_Completed__c</fullName>
        <label>NPD: R1 Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPD_R1_Started__c</fullName>
        <label>NPD: R1 Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPD_R2_Completed__c</fullName>
        <label>NPD: R2 Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPD_R2_Started__c</fullName>
        <label>NPD: R2 Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPD_R3_Completed__c</fullName>
        <label>NPD: R3 Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPD_R3_Started__c</fullName>
        <label>NPD: R3 Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Pull_Up_Date__c</fullName>
        <label>Next Pull Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <inlineHelpText>R1	6 Weeks
R2	6 Weeks
R3	6 Weeks
Dev	12 Weeks
Alpha	12 Weeks
Beta	12 Weeks
Launch	12 Weeks</inlineHelpText>
        <label>Project Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-R1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Launched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X - Cancelled/Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Terminated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created in CR-3177. Access to field is given via Higher Ed Access permission set.</description>
        <inlineHelpText>Applicable only when this Study pertains to a primary or individual institition.</inlineHelpText>
        <label>Primary Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Syndicated_Studies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Primary Program focus for the study</inlineHelpText>
        <label>Primary Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipName>Syndicated_Studies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Progress_to_Launch_Score_Data_Entry_Date__c</fullName>
        <label>Progress to Launch Score Data Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Health__c</fullName>
        <inlineHelpText>A - Definite launch, execution feeling good
B - Definite launch, execution expected to be challenging
C - Likely terminating project in next month unless something improves</inlineHelpText>
        <label>Project Health</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <label>Project Phase Detail</label>
        <picklist>
            <picklistValues>
                <fullName>On Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delayed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <description>Created for CR-20141106-8005.</description>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Big Bang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traditional NPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Projected_ARC__c</fullName>
        <inlineHelpText>Thousands</inlineHelpText>
        <label>Projected ARC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Research_Type__c</fullName>
        <label>Research Type</label>
        <picklist>
            <picklistValues>
                <fullName>National Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teleconference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Member Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Project</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Notes__c</fullName>
        <label>Risk Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Study_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Syndicated_Studies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Syndicated_Study__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Study</label>
        <referenceTo>Syndicated_Study__c</referenceTo>
        <relationshipLabel>Related Research Studies</relationshipLabel>
        <relationshipName>Syndicated_Studies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Study_Completion_Date__c</fullName>
        <label>Target Study Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Team_Member_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Research_Studies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Member_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Research_Studies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Terrain__c</fullName>
        <label>Terrain</label>
        <picklist>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pop Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rev Cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next Generation Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Decision Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Research Study</label>
    <listViews>
        <fullName>Academic_Decision_Support_R1</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Study_Lead__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Short_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>Academic Decision Support R1</label>
    </listViews>
    <listViews>
        <fullName>Active_AF_Studies</fullName>
        <columns>NAME</columns>
        <columns>Primary_Program__c</columns>
        <columns>Year__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CONNECTION_RECEIVED.NAME</columns>
        <columns>CONNECTION_SENT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Primary_Program__c</field>
            <operation>equals</operation>
            <value>EDCD</value>
        </filters>
        <label>Active AF Studies</label>
    </listViews>
    <listViews>
        <fullName>Active_CR_Studies</fullName>
        <columns>NAME</columns>
        <columns>Research_Type__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Primary_Program__c</columns>
        <columns>Year__c</columns>
        <columns>Target_Study_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target_Study_Completion_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Primary_Program__c</field>
            <operation>contains</operation>
            <value>CPR</value>
        </filters>
        <label>Active CR Studies</label>
    </listViews>
    <listViews>
        <fullName>Active_EAB_Studies</fullName>
        <columns>NAME</columns>
        <columns>Research_Type__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Primary_Program__c</columns>
        <columns>Year__c</columns>
        <columns>Target_Study_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target_Study_Completion_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Primary_Program__c</field>
            <operation>startsWith</operation>
            <value>ED,BHSM,BHEH,BHGS,PBME</value>
        </filters>
        <label>Active EAB Studies</label>
    </listViews>
    <listViews>
        <fullName>Active_FLC_Studies</fullName>
        <columns>NAME</columns>
        <columns>Research_Type__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Primary_Program__c</columns>
        <columns>Year__c</columns>
        <columns>Target_Study_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target_Study_Completion_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Primary_Program__c</field>
            <operation>contains</operation>
            <value>FLR</value>
        </filters>
        <label>Active FLC Studies</label>
    </listViews>
    <listViews>
        <fullName>Active_HCAB_Studies</fullName>
        <columns>NAME</columns>
        <columns>Research_Type__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Primary_Program__c</columns>
        <columns>Year__c</columns>
        <columns>Target_Study_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target_Study_Completion_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Primary_Program__c</field>
            <operation>contains</operation>
            <value>HCAB</value>
        </filters>
        <label>Active HCAB Studies</label>
    </listViews>
    <listViews>
        <fullName>Active_NEC_Studies</fullName>
        <columns>NAME</columns>
        <columns>Research_Type__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Primary_Program__c</columns>
        <columns>Year__c</columns>
        <columns>Target_Study_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target_Study_Completion_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Primary_Program__c</field>
            <operation>contains</operation>
            <value>NEC</value>
        </filters>
        <label>Active NEC Studies</label>
    </listViews>
    <listViews>
        <fullName>Active_OR_Studies</fullName>
        <columns>NAME</columns>
        <columns>Research_Type__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Primary_Program__c</columns>
        <columns>Year__c</columns>
        <columns>Target_Study_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target_Study_Completion_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Primary_Program__c</field>
            <operation>contains</operation>
            <value>ONC</value>
        </filters>
        <label>Active OR Studies</label>
    </listViews>
    <listViews>
        <fullName>Active_Studies</fullName>
        <columns>NAME</columns>
        <columns>Research_Type__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Primary_Program__c</columns>
        <columns>Year__c</columns>
        <columns>Target_Study_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target_Study_Completion_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>All Active Studies</label>
    </listViews>
    <listViews>
        <fullName>All_Studies</fullName>
        <columns>NAME</columns>
        <columns>Research_Type__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Primary_Program__c</columns>
        <columns>Year__c</columns>
        <columns>Target_Study_Completion_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Studies</label>
    </listViews>
    <listViews>
        <fullName>GFHI_Studies_Projects</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Primary_Program__c</field>
            <operation>contains</operation>
            <value>CIHE</value>
        </filters>
        <label>GFHI Studies &amp; Projects</label>
    </listViews>
    <listViews>
        <fullName>My_Active_Studies</fullName>
        <columns>NAME</columns>
        <columns>Research_Type__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Primary_Program__c</columns>
        <columns>Year__c</columns>
        <columns>Target_Study_Completion_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Target_Study_Completion_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>My Active Studies</label>
    </listViews>
    <listViews>
        <fullName>National_Meeting_Studies</fullName>
        <columns>NAME</columns>
        <columns>Research_Type__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Primary_Program__c</columns>
        <columns>Year__c</columns>
        <columns>Target_Study_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target_Study_Completion_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Research_Type__c</field>
            <operation>contains</operation>
            <value>National Meeting</value>
        </filters>
        <label>National Meeting Studies</label>
    </listViews>
    <listViews>
        <fullName>White_Paper_Studies</fullName>
        <columns>NAME</columns>
        <columns>Research_Type__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Primary_Program__c</columns>
        <columns>Year__c</columns>
        <columns>Target_Study_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target_Study_Completion_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Research_Type__c</field>
            <operation>contains</operation>
            <value>White Paper</value>
        </filters>
        <label>White Paper Studies</label>
    </listViews>
    <nameField>
        <label>Study Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Research Studies</pluralLabel>
    <recordTypes>
        <fullName>NPD</fullName>
        <active>true</active>
        <label>NPD</label>
    </recordTypes>
    <recordTypes>
        <fullName>Syndicated_Study</fullName>
        <active>true</active>
        <label>Syndicated Study</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VR_Delay_Reason_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL (Project_Phase__c, &quot;Delayed&quot;), 
ISBLANK(Delay_Reason__c) 
)</errorConditionFormula>
        <errorMessage>If Project Phase Detail = Delayed, then Delay Reason is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Year_must_be_valid</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  Contains(RecordType.DeveloperName, &quot;Syndicated&quot;),
OR(
LEN( Year__c )   &lt; 4,
 NOT( BEGINS( Year__c , &quot;20&quot;)) ,
 VALUE( Year__c )  &lt;= 2011,
 VALUE( Year__c )   &gt;  2034
)
)</errorConditionFormula>
        <errorMessage>Please enter a valid, future Year.</errorMessage>
    </validationRules>
</CustomObject>